src/objects/SENS_eVisor__e.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Employee_ID__c</fullName>
        <label>Advisor Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_MSID__c</fullName>
        <label>Advisor MSID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Name__c</fullName>
        <label>Advisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHN_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFS Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHN_Referral_Identifier__c</fullName>
        <label>EFS Referral Identifier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complex_Indicator__c</fullName>
        <label>Complex Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation_Changed_Date__c</fullName>
        <label>Designation Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <label>EID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_Member_Identifier__c</fullName>
        <label>Enrolled Member Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <label>Enrollment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Family_Overview__c</fullName>
        <label>Family Overview</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <label>Family Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Family_Contact_Into_Center__c</fullName>
        <label>First Family Contact Into Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <label>Policy ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Referred__c</fullName>
        <label>Reason for Referred</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SENS_Publish_ID__c</fullName>
        <label>SENS Publish ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SENS_Unique_ID__c</fullName>
        <label>SENS Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SENS eVisor</label>
    <pluralLabel>SENS eVisors</pluralLabel>
</CustomObject>